chore: implemented openapi models
